<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/resetAlarm"
            android:layout_width="wrap_content"
            android:background="@drawable/rounded_corner_button"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:padding="5dp"
            android:text="@string/reset"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmView4" />

        <Button
            android:id="@+id/saveAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginEnd="28dp"
            android:text="@string/zapisz"
            android:background="@drawable/rounded_corner_button"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmView4" />

        <Button
            android:id="@+id/setAlarm4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ustaw_alarm_4"
            android:visibility="invisible"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner__minor_button"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmView4" />

        <TextView
            android:id="@+id/alarmView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/brak"
            android:padding="5dp"
            android:textSize="22sp"
            android:visibility="invisible"
            android:textColor="#000000"

            android:background="@drawable/rounded_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setAlarm3" />

        <Button
            android:id="@+id/setAlarm3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ustaw_alarm_3"
            android:visibility="invisible"
            android:padding="5dp"
            android:background="@drawable/rounded_corner__minor_button"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmView3" />

        <TextView
            android:id="@+id/alarmView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/brak"
            android:textSize="22sp"
            android:visibility="invisible"
            android:background="@drawable/rounded_corner"
            android:padding="5dp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setAlarm2" />

        <Button
            android:id="@+id/setAlarm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ustaw_alarm_2"
            android:visibility="invisible"
            android:background="@drawable/rounded_corner__minor_button"
            android:textColor="#FFFFFF"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmView2" />

        <TextView
            android:id="@+id/alarmView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/brak"
            android:padding="5dp"
            android:textSize="22sp"
            android:visibility="invisible"
            android:textColor="#000000"

            android:background="@drawable/rounded_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setAlarm1" />

        <Button
            android:id="@+id/setAlarm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ustaw_alarm_1"
            android:visibility="invisible"
            android:padding="5dp"
            android:background="@drawable/rounded_corner__minor_button"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmView1" />

        <TextView
            android:id="@+id/alarmView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner"
            android:padding="5dp"
            android:text="@string/brak"
            android:textColor="#000000"
            android:textSize="22sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerAlarm" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="278dp"
            android:layout_height="101dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ustal_godziny_powiadomime"
            android:textSize="36sp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerAlarm"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/design_default_color_background"
            android:foregroundGravity="clip_horizontal"
            android:gravity="center_horizontal"
            android:keepScreenOn="false"
            android:layoutMode="opticalBounds"
            android:pointerIcon="top_left_diagonal_double_arrow"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</RelativeLayout>