<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/odrobaczanieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner__minor_button"
            android:padding="5dp"
            android:text="@string/ustaw_nast_pn_dat"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/odrobaczanieTextView" />

        <Button
            android:id="@+id/zapiszDaty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/zapisz"
            android:background="@drawable/rounded_corner_button"
            android:textColor="#000000"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/odrobaczanieButton" />

        <TextView
            android:id="@+id/odrobaczanieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUstawOdrobaczanie" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="314dp"
            android:layout_height="104dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ustal_daty_wizyt_u_weterynarza"
            android:textColor="#000000"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerDate"
            style="@style/spinner_style"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:foregroundGravity="clip_horizontal"
            android:gravity="center"
            android:keepScreenOn="false"
            android:layoutMode="opticalBounds"
            android:pointerIcon="top_left_diagonal_double_arrow"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/szczepienieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUstawSzczepienie" />

        <Button
            android:id="@+id/szczepienieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner__minor_button"
            android:padding="5dp"
            android:text="@string/ustaw_nast_pn_dat"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/szczepienieTextView" />

        <TextView
            android:id="@+id/textViewUstawSzczepienie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner"
            android:textColor="#000000"
            android:text="@string/data_nast_pnego_szczepienia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDate" />

        <TextView
            android:id="@+id/textViewUstawOdrobaczanie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/data_nast_pnego_odrobaczania"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:padding="5dp"
            android:background="@drawable/rounded_corner"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/szczepienieButton" />

        <Button
            android:id="@+id/dzisiajSzczepienie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:text="@string/dzisiaj_szczepienie"
            android:background="@drawable/rounded_corner_button"
            android:textColor="#000000"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/odrobaczanieButton" />

        <Button
            android:id="@+id/dzisiajOdrobaczanie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/rounded_corner_button"
            android:textColor="#000000"
            android:padding="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dzisiaj_odrobaczanie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/odrobaczanieButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</RelativeLayout>